# Streaming-Video-RAG

./: .env.example  .gitignore  ARCHITECTURE_RULES.md  CLAUDE.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  architecture_plan.md  code_review.md  config.py  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
api/: main.py  models.py
api/routes/: ingest.py  query.py  search.py  videos.py
certs/: README.md
example/: main.py
ingestion/: __init__.py  base.py  live_stream.py  local_file.py  video_api.py  youtube.py
llm/: __init__.py  factory.py
processing/: __init__.py  chunker.py  embedder.py
rag/: __init__.py  pipeline.py  qa_chain.py  retriever.py  search.py  summarizer.py
storage/: __init__.py  database.py
transcription/: __init__.py  whisper_transcriber.py
ui/: app.py  utils.py
ui/tabs/: __init__.py  ingest_tab.py  library_tab.py  qa_tab.py  search_tab.py  summarize_tab.py
vector_store/: __init__.py  base.py  chroma_store.py  qdrant_store.py
