[project]
name = "streaming-video-rag"
version = "0.1.0"
description = "RAG system for streaming video content with transcription, embeddings, and semantic search"
authors = [
  { name = "Streaming Video-RAG Team" }
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  # Core
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",

  # Ingestion
  "yt-dlp>=2024.1.1",
  "ffmpeg-python>=0.2.0",
  "requests>=2.31.0",

  # Transcription
  "openai-whisper>=20231117",

  # LLM Providers
  "openai>=1.30.0",
  "openai-agents>=0.17.0",
  "anthropic>=0.25.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain-community>=0.2.0",

  # Embeddings
  "sentence-transformers>=2.7.0",
  "torch>=2.2.0",

  # Vector Stores
  "chromadb>=0.5.0",
  "qdrant-client>=1.9.0",

  # RAG
  "tiktoken>=0.7.0",
  "nltk>=3.8.1",

  # Storage
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "aiosqlite>=0.20.0",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",

  # UI
  "streamlit>=1.35.0",
  "streamlit-extras>=0.4.0",

  # Utilities
  "tqdm>=4.66.0",
  "loguru>=0.7.2",
  "tenacity>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/varit05/Streaming-Video-RAG"
Repository = "https://github.com/varit05/Streaming-Video-RAG.git"
Issues = "https://github.com/varit05/Streaming-Video-RAG/issues"

[project.scripts]
video-rag-api = "api.main:main"
video-rag-ui = "ui.app:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pre-commit>=3.7.0",
  "pydantic[mypy]>=2.0",
  "sqlalchemy[mypy]>=2.0",
  "types-requests>=2.31.0",
  "types-tqdm>=4.66.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "ingestion", "llm", "processing", "rag", "storage", "transcription", "ui", "vector_store"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  "build/",
  "dist/",
  "__pycache__/",
  ".git/",
  ".venv/",
  "venv/",
  "node_modules/",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
  "UP",  # pyupgrade
  "RUF", # ruff specific
  "TID", # tidy imports
  "TRY", # try/except
  "PERF",# performance
  "ANN", # annotations
  "A",   # built-ins
  "ARG", # unused arguments
  "PTH", # pathlib
  "ERA", # eradicate (commented out code)
]
ignore = [
  "E501",   # line length (handled by formatter)
  "TRY003", # long message in except
  "TRY301", # abstract raise to inner function
  "ANN101", # Missing type annotation for self
  "ANN102", # Missing type annotation for cls
  "ANN401", # Dynamically typed expressions (Any) allowed if explicit
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["api", "ingestion", "llm", "processing", "rag", "storage", "transcription", "ui", "vector_store"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
strict_optional = true
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin"
]
show_error_codes = true
pretty = true
exclude = [
  "build/",
  "dist/",
  "__pycache__/",
  ".venv/",
  "venv/",
  "node_modules/",
  ".git/",
]

[[tool.mypy.overrides]]
module = [
  "chromadb.*",
  "openai.*",
  "whisper.*",
  "sentence_transformers.*",
  "ffmpeg.*",
  "streamlit.*",
  "streamlit_extras.*",
  "langchain.*",
  "langchain_community.*",
  "langchain_openai.*",
  "langchain_anthropic.*",
  "langchain_ollama.*",
  "torch.*",
  "tiktoken.*",
  "uvicorn.*",
  "fastapi.*",
  "alembic.*",
  "loguru.*",
  "tqdm.*",
  "tenacity.*",
  "requests.*",
  "sqlalchemy.*",
  "aiosqlite.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=api --cov=ingestion --cov=llm --cov=processing --cov=rag --cov=storage --cov=transcription --cov=ui --cov=vector_store --cov-report=term-missing"
asyncio_mode = "auto"

